# schemaProject

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  quick-setup-20-teachers.json
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 17532bfbf5a3_add_grid_position_to_rooms.py  19011691cf50_add_grid_pane_to_rooms.py  7ebb3dea076b_initial_schema.py  9dfaedd2d793_add_room_availability_table.py  a79ee9f7d365_make_schedule_entries_room_id_nullable.py  b8f6fead8f5c_drop_teacher_email_column.py  d71d10d4c0b5_add_primary_room_id_to_school_classes.py  ed3afeb1d478_add_school_class_entity_and_class_id_.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py  rooms.py  schedules.py  school_classes.py  setup.py  subjects.py  teachers.py  timeslots.py
backend/app/models/: __init__.py  constraint_config.py  room.py  schedule.py  school_class.py  subject.py  substitution.py  teacher.py  tenant.py  timeslot.py
backend/app/schemas/: room.py  schedule.py  school_class.py  setup.py  subject.py  teacher.py  timeslot.py
backend/app/services/: schedule_service.py
backend/app/solver/: model.py
backend/tests/: conftest.py
backend/tests/test_api/: test_crud.py
backend/tests/test_solver/: test_model.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/pages/: Classes.tsx  Dashboard.tsx  Rooms.tsx  ScheduleView.tsx  Schedules.tsx  Setup.tsx  Subjects.tsx  Teachers.tsx  Timeslots.tsx
frontend/src/styles/: shared.ts
frontend/src/types/: index.ts
(+4 files in other folders)
